QF Add basic models and basic authentication

--- a/src/SFA.DAS.ApprenticeFeedback.Api/appsettings.json
+++ b/src/SFA.DAS.ApprenticeFeedback.Api/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConfigurationStorageConnectionString": "UseDevelopmentStorage=true",
+  "ConfigNames": "SFA.DAS.ApprenticeFeedback.Api",
+  "EnvironmentName": "LOCAL",
+  "Version": "1.0"
 }
