--- a/src/SFA.DAS.ApprenticeFeedback/SFA.DAS.ApprenticeFeedback.csproj
+++ b/src/SFA.DAS.ApprenticeFeedback/SFA.DAS.ApprenticeFeedback.csproj
@@ -5,7 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Configuration\" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Application\Commands\" />
+    <Folder Include="Application\Queries\" />
   </ItemGroup>
 
 </Project>
