--- a/src/SFA.DAS.ApprenticeFeedback/SFA.DAS.ApprenticeFeedback.csproj
+++ b/src/SFA.DAS.ApprenticeFeedback/SFA.DAS.ApprenticeFeedback.csproj
@@ -5,7 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.22" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
   <ItemGroup>
