--- a/src/SFA.DAS.ApprenticeFeedback.Data/SFA.DAS.ApprenticeFeedback.Data.csproj
+++ b/src/SFA.DAS.ApprenticeFeedback.Data/SFA.DAS.ApprenticeFeedback.Data.csproj
@@ -10,6 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\SFA.DAS.ApprenticeFeedback.Application\SFA.DAS.ApprenticeFeedback.Application.csproj" />
     <ProjectReference Include="..\SFA.DAS.ApprenticeFeedback.Domain\SFA.DAS.ApprenticeFeedback.Domain.csproj" />
   </ItemGroup>
 
