Unit test adjustments need help from Chris/Pete

--- a/src/SFA.DAS.ApprenticeFeedback.Application.UnitTests/SFA.DAS.ApprenticeFeedback.Application.UnitTests.csproj
+++ b/src/SFA.DAS.ApprenticeFeedback.Application.UnitTests/SFA.DAS.ApprenticeFeedback.Application.UnitTests.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
     <PackageReference Include="coverlet.collector" Version="3.0.2" />
     <PackageReference Include="SFA.DAS.Testing.AutoFixture" Version="3.0.169" />
+    <PackageReference Include="System.Threading.Tasks" Version="4.3.0" />
   </ItemGroup>
 
   <ItemGroup>
