--- a/src/SFA.DAS.ApprenticeFeedback.Data.UnitTests/SFA.DAS.ApprenticeFeedback.Data.UnitTests.csproj
+++ b/src/SFA.DAS.ApprenticeFeedback.Data.UnitTests/SFA.DAS.ApprenticeFeedback.Data.UnitTests.csproj
@@ -14,7 +14,10 @@
     <PackageReference Include="Moq" Version="4.16.1" />
     <PackageReference Include="NUnit" Version="3.13.2" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.0.0" />
-    <PackageReference Include="coverlet.collector" Version="3.1.0" />
+    <PackageReference Include="coverlet.collector" Version="3.1.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="SFA.DAS.Testing.AutoFixture" Version="3.0.169" />
   </ItemGroup>
 
