--- a/src/SFA.DAS.ApprenticeFeedback.Domain.UnitTests/SFA.DAS.ApprenticeFeedback.Domain.UnitTests.csproj
+++ b/src/SFA.DAS.ApprenticeFeedback.Domain.UnitTests/SFA.DAS.ApprenticeFeedback.Domain.UnitTests.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="coverlet.collector" Version="3.1.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="FluentAssertions" Version="6.5.1" />
     <PackageReference Include="NUnit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.16.1" />
