--- a/src/Tests/SFA.DAS.ApprenticeFeedback.Api.UnitTests/SFA.DAS.ApprenticeFeedback.Api.UnitTests.csproj
+++ b/src/Tests/SFA.DAS.ApprenticeFeedback.Api.UnitTests/SFA.DAS.ApprenticeFeedback.Api.UnitTests.csproj
@@ -12,7 +12,10 @@
     <PackageReference Include="Moq" Version="4.16.1" />
     <PackageReference Include="NUnit" Version="3.13.1" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
-    <PackageReference Include="coverlet.collector" Version="3.0.2" />
+    <PackageReference Include="coverlet.collector" Version="3.1.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="SFA.DAS.Testing.AutoFixture" Version="3.0.169" />
   </ItemGroup>
 
