--- a/src/SFA.DAS.ApprenticeFeedback.Api/nlog.config
+++ b/src/SFA.DAS.ApprenticeFeedback.Api/nlog.config
@@ -13,6 +13,6 @@
     <target name="Redis" appName="${appName}" environmentKeyName="EnvironmentName" connectionStringName="LoggingRedisConnectionString" includeAllProperties="true" layout="${simplelayout}" xsi:type="Redis"/>
   </targets>
   <rules>
-    <logger name="*" minlevel="Debug" writeTo="Console, File, Redis"/>
+    <logger name="*" minlevel="Debug" writeTo="Console, Redis"/>
   </rules>
 </nlog>
