Refactor WIP - repository removed. Tested by Swagger. Need to add tests back in.

--- a/src/SFA.DAS.ApprenticeFeedback.Data/SFA.DAS.ApprenticeFeedback.Data.csproj
+++ b/src/SFA.DAS.ApprenticeFeedback.Data/SFA.DAS.ApprenticeFeedback.Data.csproj
@@ -14,4 +14,8 @@
     <ProjectReference Include="..\SFA.DAS.ApprenticeFeedback.Domain\SFA.DAS.ApprenticeFeedback.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Repository\" />
+  </ItemGroup>
+
 </Project>
