--- a/src/SFA.DAS.ApprenticeFeedback.Api/appsettings.Development.json
+++ b/src/SFA.DAS.ApprenticeFeedback.Api/appsettings.Development.json
@@ -5,5 +5,10 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "AllowedHosts": "*",
+  "ConfigurationStorageConnectionString": "UseDevelopmentStorage=true",
+  "ConfigNames": "SFA.DAS.ApprenticeFeedback.Api",
+  "EnvironmentName": "LOCAL",
+  "Version": "1.0"
 }
