--- a/src/SFA.DAS.ApprenticeFeedback.Application/SFA.DAS.ApprenticeFeedback.Application.csproj
+++ b/src/SFA.DAS.ApprenticeFeedback.Application/SFA.DAS.ApprenticeFeedback.Application.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="MediatR" Version="10.0.1" />
+    <PackageReference Include="SFA.DAS.Notifications.Api.Client" Version="2.2.210" />
   </ItemGroup>
 
   <ItemGroup>
