--- a/src/Tests/SFA.DAS.ApprenticeFeedback.Api.UnitTests/SFA.DAS.ApprenticeFeedback.Api.UnitTests.csproj
+++ b/src/Tests/SFA.DAS.ApprenticeFeedback.Api.UnitTests/SFA.DAS.ApprenticeFeedback.Api.UnitTests.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FluentAssertions" Version="6.4.0" />
+    <PackageReference Include="FluentAssertions" Version="6.5.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
     <PackageReference Include="Moq" Version="4.16.1" />
     <PackageReference Include="NUnit" Version="3.13.1" />
@@ -21,6 +21,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\SFA.DAS.ApprenticeFeedback.Api\SFA.DAS.ApprenticeFeedback.Api.csproj" />
+    <ProjectReference Include="..\..\SFA.DAS.ApprenticeFeedback.Application.UnitTests\SFA.DAS.ApprenticeFeedback.Application.UnitTests.csproj" />
   </ItemGroup>
 
 </Project>
