--- a/src/SFA.DAS.ApprenticeFeedback.Application/SFA.DAS.ApprenticeFeedback.Application.csproj
+++ b/src/SFA.DAS.ApprenticeFeedback.Application/SFA.DAS.ApprenticeFeedback.Application.csproj
@@ -1,14 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="11.2.0" />
     <PackageReference Include="MediatR" Version="10.0.1" />
     <PackageReference Include="SFA.DAS.Notifications.Messages" Version="3.0.0" />
-    <PackageReference Include="SFA.DAS.NServiceBus" Version="16.0.21" />
+    <PackageReference Include="SFA.DAS.NServiceBus" Version="17.0.49" />
   </ItemGroup>
 
   <ItemGroup>
