--- a/src/SFA.DAS.ApprenticeFeedback.Data/SFA.DAS.ApprenticeFeedback.Data.csproj
+++ b/src/SFA.DAS.ApprenticeFeedback.Data/SFA.DAS.ApprenticeFeedback.Data.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Azure.Services.AppAuthentication" Version="1.6.2" />
+    <PackageReference Include="Azure.Identity" Version="1.8.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.22" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.22" />
   </ItemGroup>
