--- a/src/SFA.DAS.ApprenticeFeedback.Application/SFA.DAS.ApprenticeFeedback.Application.csproj
+++ b/src/SFA.DAS.ApprenticeFeedback.Application/SFA.DAS.ApprenticeFeedback.Application.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="MediatR" Version="10.0.1" />
     <PackageReference Include="SFA.DAS.Notifications.Messages" Version="3.0.0" />
     <PackageReference Include="SFA.DAS.NServiceBus" Version="17.0.49" />
+    <PackageReference Include="System.Security.Cryptography.X509Certificates" Version="4.1.2" />
   </ItemGroup>
 
   <ItemGroup>
