--- a/src/SFA.DAS.ApprenticeFeedback.Data.UnitTests/SFA.DAS.ApprenticeFeedback.Data.UnitTests.csproj
+++ b/src/SFA.DAS.ApprenticeFeedback.Data.UnitTests/SFA.DAS.ApprenticeFeedback.Data.UnitTests.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="FluentAssertions" Version="6.5.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
     <PackageReference Include="Moq" Version="4.16.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="NUnit" Version="3.13.3" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.3.1" />
     <PackageReference Include="coverlet.collector" Version="3.1.2">
