--- a/pipeline-templates/job/deploy.yml
+++ b/pipeline-templates/job/deploy.yml
@@ -43,8 +43,11 @@ jobs:
               ConfigurationStorageConnectionString: $(ConfigurationStorageConnectionString)
         - template: azure-pipelines-templates/deploy/step/generate-config.yml@das-platform-building-blocks
           parameters:
+            EnvironmentName: $(EnvironmentName)  
             ServiceConnection: ${{ parameters.ServiceConnection }}
             SourcePath: $(Pipeline.Workspace)/das-employer-config/Configuration/das-apprentice-feedback-api
+            StorageAccountName: $(ConfigurationStorageAccountName)
+            StorageAccountResourceGroup: $(SharedEnvResourceGroup)
             TargetFileName: '*.schema.json'
             TableName: Configuration
         - template: azure-pipelines-templates/deploy/step/sql-dacpac-deploy.yml@das-platform-building-blocks
