Added integration test framework

--- a/.gitignore
+++ b/.gitignore
@@ -350,3 +350,4 @@ MigrationBackup/
 .ionide/
 
 src/.idea/.idea.SFA.DAS.ApprenticeFeedback.Api/.idea/
+/src/SFA.DAS.ApprenticeFeedback.Api.IntegrationTests/connectionStrings.Local.json
