--- a/src/SFA.DAS.ApprenticeFeedback.Application/SFA.DAS.ApprenticeFeedback.Application.csproj
+++ b/src/SFA.DAS.ApprenticeFeedback.Application/SFA.DAS.ApprenticeFeedback.Application.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="MediatR" Version="12.4.0" />
     <PackageReference Include="SFA.DAS.Notifications.Messages" Version="3.0.10" />
     <PackageReference Include="SFA.DAS.NServiceBus" Version="17.0.49" />
+    <PackageReference Include="System.Formats.Asn1" Version="8.0.1" />
     <PackageReference Include="System.Security.Cryptography.X509Certificates" Version="4.3.2" />
     <PackageReference Include="System.Security.Cryptography.Xml" Version="8.0.1" />
   </ItemGroup>
