moved truncate and merge to stored procedures.  added integration tests for new stored procedures

--- a/src/SFA.DAS.ApprenticeFeedback.Api.IntegrationTests/SFA.DAS.ApprenticeFeedback.Api.IntegrationTests.csproj
+++ b/src/SFA.DAS.ApprenticeFeedback.Api.IntegrationTests/SFA.DAS.ApprenticeFeedback.Api.IntegrationTests.csproj
@@ -35,6 +35,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="connectionStrings.Local.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="connectionStrings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
