--- a/src/SFA.DAS.ApprenticeFeedback.Domain.UnitTests/SFA.DAS.ApprenticeFeedback.Domain.UnitTests.csproj
+++ b/src/SFA.DAS.ApprenticeFeedback.Domain.UnitTests/SFA.DAS.ApprenticeFeedback.Domain.UnitTests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -14,7 +14,7 @@
     <PackageReference Include="FluentAssertions" Version="6.9.0" />
     <PackageReference Include="NUnit" Version="3.13.3" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.3.1" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.1" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.0" />
     <PackageReference Include="SFA.DAS.Testing.AutoFixture" Version="3.0.169" />
   </ItemGroup>
 
