--- a/src/SFA.DAS.ApprenticeFeedback.Api/Properties/launchSettings.json
+++ b/src/SFA.DAS.ApprenticeFeedback.Api/Properties/launchSettings.json
@@ -24,7 +24,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "dotnetRunMessages": "true",
+      "dotnetRunMessages": true,
       "applicationUrl": "https://localhost:5601;http://localhost:5600"
     }
   }
