--- a/src/SFA.DAS.ApprenticeFeedback.Domain/SFA.DAS.ApprenticeFeedback.Domain.csproj
+++ b/src/SFA.DAS.ApprenticeFeedback.Domain/SFA.DAS.ApprenticeFeedback.Domain.csproj
@@ -9,7 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0-rc.2.24474.1" />
   </ItemGroup>
 
 </Project>
