--- a/src/SFA.DAS.ApprenticeFeedback.Domain/SFA.DAS.ApprenticeFeedback.Domain.csproj
+++ b/src/SFA.DAS.ApprenticeFeedback.Domain/SFA.DAS.ApprenticeFeedback.Domain.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.13" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.13" />
   </ItemGroup>
 
 </Project>
