EC-505-Decommission kibana logs

--- a/src/SFA.DAS.ApprenticeFeedback.Api/appsettings.json
+++ b/src/SFA.DAS.ApprenticeFeedback.Api/appsettings.json
@@ -10,5 +10,6 @@
   "ConfigurationStorageConnectionString": "UseDevelopmentStorage=true",
   "ConfigNames": "SFA.DAS.ApprenticeFeedback.Api",
   "EnvironmentName": "LOCAL",
+  "APPLICATIONINSIGHTS_CONNECTION_STRING": "",
   "Version": "1.0"
 }
