Added DEMO VG for ASP migration

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -159,6 +159,7 @@ stages:
   variables:
   - group: DevTest Management Resources
   - group: DEMO DevTest Shared Resources
+  - group: DEMO das-apprentice-feedback-api
   jobs:
   - template: pipeline-templates/job/deploy.yml
     parameters:
