P2-2700 - Foundation apprenticeships email programme
Updated AddEngagementEmails.sql to include the new programme type foundation.
Updated GenerateFeedbackTranscation to include logic for handling the new programme type foundation
Added integration tests for the new programme type

--- a/src/SFA.DAS.ApprenticeFeedback.Api.IntegrationTests/SFA.DAS.ApprenticeFeedback.Api.IntegrationTests.csproj
+++ b/src/SFA.DAS.ApprenticeFeedback.Api.IntegrationTests/SFA.DAS.ApprenticeFeedback.Api.IntegrationTests.csproj
@@ -38,6 +38,9 @@
     <None Update="connectionStrings.Local.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="connectionStrings.Local.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="connectionStrings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
